--- a/javatests/de/jflex/testcase/unicode/unicode_2_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_2_0/BUILD.bazel
@@ -8,3 +8,58 @@ check_deps(
     name = "deps_to_bootstrap_jflex_test",
     prohibited = "@jflex_rules//jflex:jflex_bin",
 )
+
+# Test Age property
+
+java_test(
+    name = "UnicodeAgeTest_2_0",
+    srcs = [
+        "UnicodeAgeTest_2_0.java",
+                ":UnicodeAge_2_0_age_1_1",
+                ":UnicodeAge_2_0_age_2_0",
+                ":UnicodeAge_2_0_age_subtraction",
+        ":UnicodeAge_2_0_age_unassigned",
+    ],
+    data = [
+                "UnicodeAge_2_0_age_1_1.output",
+                "UnicodeAge_2_0_age_2_0.output",
+                "UnicodeAge_2_0_age_subtraction.output",
+        "UnicodeAge_2_0_age_unassigned.output",
+        "//java/de/jflex/testcase/resources:All.Unicode.BMP.characters.input",
+    ],
+    deps = [
+        "//java/de/jflex/util/javac:package_util",
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+        "//jflex/src/main/java/jflex/core/unicode",
+        "//third_party/com/google/truth",
+        "//third_party/javax:annotation",
+    ],
+)
+
+jflex(
+    name = "UnicodeAge_2_0_age_1_1",
+    srcs = ["UnicodeAge_2_0_age_1_1.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["UnicodeAge_2_0_age_1_1.java"],
+)
+jflex(
+    name = "UnicodeAge_2_0_age_2_0",
+    srcs = ["UnicodeAge_2_0_age_2_0.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["UnicodeAge_2_0_age_2_0.java"],
+)
+
+jflex(
+    name = "UnicodeAge_2_0_age_subtraction",
+    srcs = ["UnicodeAge_2_0_age_subtraction.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["UnicodeAge_2_0_age_subtraction.java"],
+)
+
+jflex(
+    name = "UnicodeAge_2_0_age_unassigned",
+    srcs = ["UnicodeAge_2_0_age_unassigned.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["UnicodeAge_2_0_age_unassigned.java"],
+)
