--- a/javatests/de/jflex/testcase/unicode/unicode_9_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_9_0/BUILD.bazel
@@ -15,53 +15,53 @@ java_test(
     name = "UnicodeAgeTest_9_0",
     srcs = [
         "UnicodeAgeTest_9_0.java",
-                ":UnicodeAge_9_0_age_1_1",
-                ":UnicodeAge_9_0_age_2_0",
-                ":UnicodeAge_9_0_age_2_1",
-                ":UnicodeAge_9_0_age_3_0",
-                ":UnicodeAge_9_0_age_3_1",
-                ":UnicodeAge_9_0_age_3_2",
-                ":UnicodeAge_9_0_age_4_0",
-                ":UnicodeAge_9_0_age_4_1",
-                ":UnicodeAge_9_0_age_5_0",
-                ":UnicodeAge_9_0_age_5_1",
-                ":UnicodeAge_9_0_age_5_2",
-                ":UnicodeAge_9_0_age_6_0",
-                ":UnicodeAge_9_0_age_6_1",
-                ":UnicodeAge_9_0_age_6_2",
-                ":UnicodeAge_9_0_age_6_3",
-                ":UnicodeAge_9_0_age_7_0",
-                ":UnicodeAge_9_0_age_8_0",
-                ":UnicodeAge_9_0_age_9_0",
-                ":UnicodeAge_9_0_age_subtraction",
+        ":UnicodeAge_9_0_age_1_1",
+        ":UnicodeAge_9_0_age_2_0",
+        ":UnicodeAge_9_0_age_2_1",
+        ":UnicodeAge_9_0_age_3_0",
+        ":UnicodeAge_9_0_age_3_1",
+        ":UnicodeAge_9_0_age_3_2",
+        ":UnicodeAge_9_0_age_4_0",
+        ":UnicodeAge_9_0_age_4_1",
+        ":UnicodeAge_9_0_age_5_0",
+        ":UnicodeAge_9_0_age_5_1",
+        ":UnicodeAge_9_0_age_5_2",
+        ":UnicodeAge_9_0_age_6_0",
+        ":UnicodeAge_9_0_age_6_1",
+        ":UnicodeAge_9_0_age_6_2",
+        ":UnicodeAge_9_0_age_6_3",
+        ":UnicodeAge_9_0_age_7_0",
+        ":UnicodeAge_9_0_age_8_0",
+        ":UnicodeAge_9_0_age_9_0",
+        ":UnicodeAge_9_0_age_subtraction",
         ":UnicodeAge_9_0_age_unassigned",
     ],
     data = [
-                "UnicodeAge_9_0_age_1_1.output",
-                "UnicodeAge_9_0_age_2_0.output",
-                "UnicodeAge_9_0_age_2_1.output",
-                "UnicodeAge_9_0_age_3_0.output",
-                "UnicodeAge_9_0_age_3_1.output",
-                "UnicodeAge_9_0_age_3_2.output",
-                "UnicodeAge_9_0_age_4_0.output",
-                "UnicodeAge_9_0_age_4_1.output",
-                "UnicodeAge_9_0_age_5_0.output",
-                "UnicodeAge_9_0_age_5_1.output",
-                "UnicodeAge_9_0_age_5_2.output",
-                "UnicodeAge_9_0_age_6_0.output",
-                "UnicodeAge_9_0_age_6_1.output",
-                "UnicodeAge_9_0_age_6_2.output",
-                "UnicodeAge_9_0_age_6_3.output",
-                "UnicodeAge_9_0_age_7_0.output",
-                "UnicodeAge_9_0_age_8_0.output",
-                "UnicodeAge_9_0_age_9_0.output",
-                "UnicodeAge_9_0_age_subtraction.output",
+        "UnicodeAge_9_0_age_1_1.output",
+        "UnicodeAge_9_0_age_2_0.output",
+        "UnicodeAge_9_0_age_2_1.output",
+        "UnicodeAge_9_0_age_3_0.output",
+        "UnicodeAge_9_0_age_3_1.output",
+        "UnicodeAge_9_0_age_3_2.output",
+        "UnicodeAge_9_0_age_4_0.output",
+        "UnicodeAge_9_0_age_4_1.output",
+        "UnicodeAge_9_0_age_5_0.output",
+        "UnicodeAge_9_0_age_5_1.output",
+        "UnicodeAge_9_0_age_5_2.output",
+        "UnicodeAge_9_0_age_6_0.output",
+        "UnicodeAge_9_0_age_6_1.output",
+        "UnicodeAge_9_0_age_6_2.output",
+        "UnicodeAge_9_0_age_6_3.output",
+        "UnicodeAge_9_0_age_7_0.output",
+        "UnicodeAge_9_0_age_8_0.output",
+        "UnicodeAge_9_0_age_9_0.output",
+        "UnicodeAge_9_0_age_subtraction.output",
         "UnicodeAge_9_0_age_unassigned.output",
         "//java/de/jflex/testcase/resources:All.Unicode.characters.input",
     ],
     deps = [
-        "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/util/scanner:scanner_factory",
         "//jflex/src/main/java/jflex/core/unicode",
         "//third_party/com/google/truth",
@@ -71,109 +71,126 @@ java_test(
 
 jflex(
     name = "UnicodeAge_9_0_age_1_1",
-    srcs = ["UnicodeAge_9_0_age_1_1.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_1_1.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_1_1.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_2_0",
-    srcs = ["UnicodeAge_9_0_age_2_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_2_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_2_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_2_1",
-    srcs = ["UnicodeAge_9_0_age_2_1.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_2_1.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_2_1.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_3_0",
-    srcs = ["UnicodeAge_9_0_age_3_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_3_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_3_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_3_1",
-    srcs = ["UnicodeAge_9_0_age_3_1.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_3_1.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_3_1.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_3_2",
-    srcs = ["UnicodeAge_9_0_age_3_2.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_3_2.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_3_2.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_4_0",
-    srcs = ["UnicodeAge_9_0_age_4_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_4_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_4_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_4_1",
-    srcs = ["UnicodeAge_9_0_age_4_1.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_4_1.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_4_1.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_5_0",
-    srcs = ["UnicodeAge_9_0_age_5_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_5_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_5_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_5_1",
-    srcs = ["UnicodeAge_9_0_age_5_1.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_5_1.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_5_1.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_5_2",
-    srcs = ["UnicodeAge_9_0_age_5_2.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_5_2.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_5_2.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_6_0",
-    srcs = ["UnicodeAge_9_0_age_6_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_6_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_6_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_6_1",
-    srcs = ["UnicodeAge_9_0_age_6_1.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_6_1.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_6_1.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_6_2",
-    srcs = ["UnicodeAge_9_0_age_6_2.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_6_2.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_6_2.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_6_3",
-    srcs = ["UnicodeAge_9_0_age_6_3.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_6_3.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_6_3.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_7_0",
-    srcs = ["UnicodeAge_9_0_age_7_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_7_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_7_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_8_0",
-    srcs = ["UnicodeAge_9_0_age_8_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_8_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_8_0.java"],
 )
+
 jflex(
     name = "UnicodeAge_9_0_age_9_0",
-    srcs = ["UnicodeAge_9_0_age_9_0.flex"],
+    srcs = ["//java/de/jflex/migration/unicodedatatest/testage:javatests/de/jflex/testcase/unicode/unicode_9_0/UnicodeAge_9_0_age_9_0.flex"],
     jflex_bin = "//jflex:jflex_bin",
     outputs = ["UnicodeAge_9_0_age_9_0.java"],
 )
@@ -196,8 +213,8 @@ jflex(
 java_test(
     name = "UnicodeBlocksTest_9_0",
     srcs = [
-        ":UnicodeBlocks_9_0",
         "UnicodeBlocksTest_9_0.java",
+        ":UnicodeBlocks_9_0",
     ],
     data = [
         "//java/de/jflex/testcase/resources:All.Unicode.characters.input",
