Fix generation using common KNOWN_PROPERTIES

--- a/java/de/jflex/migration/unicodedatatest/BUILD.bazel
+++ b/java/de/jflex/migration/unicodedatatest/BUILD.bazel
@@ -1,4 +1,7 @@
-load(":build_defs.bzl", "gen_build")
+load(":build_defs.bzl", "KNOWN_VERSIONS", "gen_build")
+
+# Do not test version 1.1
+TESTED_VERSION = KNOWN_VERSIONS[1:]
 
 java_binary(
     name = "generator",
@@ -27,126 +30,16 @@ java_binary(
 filegroup(
     name = "generate",
     testonly = True,
-    srcs = [
-        ":gen_build_10_0",
-        ":gen_build_11_0",
-        ":gen_build_12_0",
-        ":gen_build_12_1",
-        ":gen_build_2_0",
-        ":gen_build_2_1",
-        ":gen_build_3_0",
-        ":gen_build_3_1",
-        ":gen_build_3_2",
-        ":gen_build_4_0",
-        ":gen_build_4_1",
-        ":gen_build_5_0",
-        ":gen_build_5_1",
-        ":gen_build_6_0",
-        ":gen_build_6_1",
-        ":gen_build_6_2",
-        ":gen_build_6_3",
-        ":gen_build_7_0",
-        ":gen_build_8_0",
-        ":gen_build_9_0",
-    ],
+    srcs = [":gen_build_{x}_{y}".format(
+        x = x,
+        y = y,
+    ) for (x, y) in TESTED_VERSION],
 )
 
-gen_build(
-    name = "gen_build_2_0",
-    version = "2.0",
-)
-
-gen_build(
-    name = "gen_build_2_1",
-    version = "2.1",
-)
-
-gen_build(
-    name = "gen_build_3_0",
-    version = "3.0",
-)
-
-gen_build(
-    name = "gen_build_3_1",
-    version = "3.1",
-)
-
-gen_build(
-    name = "gen_build_3_2",
-    version = "3.2",
-)
-
-gen_build(
-    name = "gen_build_4_0",
-    version = "4.0",
-)
-
-gen_build(
-    name = "gen_build_4_1",
-    version = "4.1",
-)
-
-gen_build(
-    name = "gen_build_5_0",
-    version = "5.0",
-)
-
-gen_build(
-    name = "gen_build_5_1",
-    version = "5.1",
-)
-
-gen_build(
-    name = "gen_build_6_0",
-    version = "6.0",
-)
-
-gen_build(
-    name = "gen_build_6_1",
-    version = "6.1",
-)
-
-gen_build(
-    name = "gen_build_6_2",
-    version = "6.2",
-)
-
-gen_build(
-    name = "gen_build_6_3",
-    version = "6.3",
-)
-
-gen_build(
-    name = "gen_build_7_0",
-    version = "7.0",
-)
-
-gen_build(
-    name = "gen_build_8_0",
-    version = "8.0",
-)
-
-gen_build(
-    name = "gen_build_9_0",
-    version = "9.0",
-)
-
-gen_build(
-    name = "gen_build_10_0",
-    version = "10.0",
-)
-
-gen_build(
-    name = "gen_build_11_0",
-    version = "11.0",
-)
-
-gen_build(
-    name = "gen_build_12_0",
-    version = "12.0",
-)
-
-gen_build(
-    name = "gen_build_12_1",
-    version = "12.1",
-)
+[
+    gen_build(
+        name = "gen_build_%s_%s" % (x, y),
+        version = "%s_%s" % (x, y),
+    )
+    for (x, y) in TESTED_VERSION
+]
